--- a/public/chat.html
+++ b/public/chat.html
@@ -21,23 +21,21 @@
             margin: 0 auto;
             padding: 20px;
         }
-        .chat-container {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-        }
         .chat-header {
             background-color: #4267B2;
             color: white;
             padding: 15px;
             font-size: 18px;
             font-weight: bold;
+            border-radius: 10px 10px 0 0;
         }
         #messages {
             height: 400px;
             overflow-y: auto;
             padding: 15px;
+            background-color: white;
+            border: 1px solid #e4e6eb;
+            border-top: none;
         }
         .message {
             margin-bottom: 15px;
@@ -73,7 +71,10 @@
         #messageForm {
             display: flex;
             padding: 15px;
-            border-top: 1px solid #e4e6eb;
+            background-color: white;
+            border: 1px solid #e4e6eb;
+            border-top: none;
+            border-radius: 0 0 10px 10px;
         }
         #messageInput {
             flex-grow: 1;
@@ -127,19 +128,17 @@
 </head>
 <body>
     <div class="container">
-        <div class="chat-container">
-            <div class="chat-header">
-                Chat do Motoboy
-            </div>
-            <div id="messages"></div>
-            <div id="typingIndicator"></div>
-            <form id="messageForm">
-                <label for="fileInput" id="fileLabel">📎</label>
-                <input type="file" id="fileInput" accept="image/*">
-                <input type="text" id="messageInput" placeholder="Digite sua mensagem" required>
-                <button type="submit">Enviar</button>
-            </form>
+        <div class="chat-header">
+            Chat do Motoboy
         </div>
+        <div id="messages"></div>
+        <div id="typingIndicator"></div>
+        <form id="messageForm">
+            <label for="fileInput" id="fileLabel">📎</label>
+            <input type="file" id="fileInput" accept="image/*">
+            <input type="text" id="messageInput" placeholder="Digite sua mensagem" required>
+            <button type="submit">Enviar</button>
+        </form>
         <div class="emoji-picker">
             <span class="emoji" onclick="addEmoji('😊')">😊</span>
             <span class="emoji" onclick="addEmoji('👍')">👍</span>
@@ -174,20 +173,13 @@
         const typingIndicator = document.getElementById('typingIndicator');
 
         let currentUser;
-        let currentRoomId;
-
-        // Função para criar sala de chat
-        function createChatRoom(motoboyEmail) {
-            return db.collection('chatRooms').add({
-                motoboyEmail: motoboyEmail,
-                createdAt: firebase.firestore.FieldValue.serverTimestamp()
-            });
-        }
+        let chatRoomId;
 
         // Função para carregar mensagens
-        function loadMessages(roomId) {
-            currentRoomId = roomId;
-            db.collection('chatRooms').doc(roomId).collection('messages')
+        function loadMessages() {
+            if (!chatRoomId) return;
+
+            db.collection('chatRooms').doc(chatRoomId).collection('messages')
                 .orderBy('timestamp')
                 .onSnapshot((snapshot) => {
                     snapshot.docChanges().forEach((change) => {
@@ -198,6 +190,7 @@
                     });
                     messagesDiv.scrollTop = messagesDiv.scrollHeight;
                 });
+            observeTypingIndicator();
         }
 
         // Função para exibir mensagem
@@ -221,14 +214,18 @@
             const text = messageInput.value;
             if (text.trim() === '') return;
 
-            if (currentUser && currentRoomId) {
-                db.collection('chatRooms').doc(currentRoomId).collection('messages').add({
+            if (currentUser && chatRoomId) {
+                const newMessage = {
                     text: text,
                     sender: currentUser.email,
                     timestamp: firebase.firestore.FieldValue.serverTimestamp()
-                });
-                messageInput.value = '';
-                updateTypingStatus(false);
+                };
+                db.collection('chatRooms').doc(chatRoomId).collection('messages').add(newMessage)
+                    .then(() => {
+                        displayMessage(newMessage);
+                        messageInput.value = '';
+                        updateTypingStatus(false);
+                    });
             }
         });
 
@@ -253,11 +250,15 @@
             const storageRef = storage.ref(`chatFiles/${file.name}`);
             storageRef.put(file).then((snapshot) => {
                 snapshot.ref.getDownloadURL().then((url) => {
-                    db.collection('chatRooms').doc(currentRoomId).collection('messages').add({
+                    const newMessage = {
                         text: `<img src="${url}" alt="Imagem enviada" style="max-width: 200px;">`,
                         sender: currentUser.email,
                         timestamp: firebase.firestore.FieldValue.serverTimestamp()
-                    });
+                    };
+                    db.collection('chatRooms').doc(chatRoomId).collection('messages').add(newMessage)
+                        .then(() => {
+                            displayMessage(newMessage);
+                        });
                 });
             });
         });
@@ -271,16 +272,16 @@
         });
 
         function updateTypingStatus(isTyping) {
-            if (currentUser && currentRoomId) {
-                db.collection('chatRooms').doc(currentRoomId).update({
+            if (currentUser && chatRoomId) {
+                db.collection('chatRooms').doc(chatRoomId).update({
                     [`${currentUser.uid}_typing`]: isTyping
                 });
             }
         }
 
         // Observar indicador de digitação
-        function observeTypingIndicator(roomId) {
-            db.collection('chatRooms').doc(roomId)
+        function observeTypingIndicator() {
+            db.collection('chatRooms').doc(chatRoomId)
                 .onSnapshot((doc) => {
                     const data = doc.data();
                     for (let key in data) {
@@ -298,15 +299,20 @@
             messageInput.value += emoji;
         }
 
-        // Verificar autenticação e carregar mensagens
+        // Verificar autenticação e carregar chat
         auth.onAuthStateChanged((user) => {
             if (user) {
                 currentUser = user;
                 updateUserStatus(user.uid, true);
-                createChatRoom(user.email).then((roomRef) => {
-                    loadMessages(roomRef.id);
-                    observeTypingIndicator(roomRef.id);
-                });
+                db.collection('chatRooms').where('motoboyEmail', '==', user.email).get()
+                    .then((querySnapshot) => {
+                        if (!querySnapshot.empty) {
+                            chatRoomId = querySnapshot.docs[0].id;
+                            loadMessages();
+                        } else {
+                            console.log('Nenhuma sala de chat encontrada para este motoboy');
+                        }
+                    });
             } else {
                 console.log('Usuário não autenticado');
                 // Redirecionar para página de login ou mostrar mensagem de erro
