--- a/public/chatonline.html
+++ b/public/chatonline.html
@@ -20,25 +20,16 @@
             display: flex;
             height: 100vh;
         }
-        .sidebar {
+        .chat-list {
             width: 300px;
-            background-color: #fff;
+            background-color: white;
             border-right: 1px solid #e4e6eb;
             overflow-y: auto;
         }
-        .chat-list {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
         .chat-item {
             padding: 15px;
-            border-bottom: 1px solid #e4e6eb;
             cursor: pointer;
-            transition: background-color 0.3s;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            border-bottom: 1px solid #e4e6eb;
         }
         .chat-item:hover {
             background-color: #f0f2f5;
@@ -46,18 +37,7 @@
         .chat-item.active {
             background-color: #e7f3ff;
         }
-        .remove-chat {
-            background-color: #ff4d4d;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .remove-chat:hover {
-            background-color: #ff3333;
-        }
-        .chat-container {
+        .chat-window {
             flex-grow: 1;
             display: flex;
             flex-direction: column;
@@ -73,6 +53,7 @@
             flex-grow: 1;
             overflow-y: auto;
             padding: 15px;
+            background-color: white;
         }
         .message {
             margin-bottom: 15px;
@@ -108,6 +89,7 @@
         #messageForm {
             display: flex;
             padding: 15px;
+            background-color: white;
             border-top: 1px solid #e4e6eb;
         }
         #messageInput {
@@ -162,13 +144,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="sidebar">
-            <ul id="chatList" class="chat-list"></ul>
-        </div>
-        <div class="chat-container">
-            <div class="chat-header">
-                Chat do Administrador
-            </div>
+        <div class="chat-list" id="chatList"></div>
+        <div class="chat-window">
+            <div class="chat-header" id="chatHeader">Chat do Administrador</div>
             <div id="messages"></div>
             <div id="typingIndicator"></div>
             <form id="messageForm">
@@ -206,6 +184,7 @@
         const storage = firebase.storage();
 
         const chatList = document.getElementById('chatList');
+        const chatHeader = document.getElementById('chatHeader');
         const messagesDiv = document.getElementById('messages');
         const messageForm = document.getElementById('messageForm');
         const messageInput = document.getElementById('messageInput');
@@ -213,7 +192,7 @@
         const typingIndicator = document.getElementById('typingIndicator');
 
         let currentUser;
-        let currentRoomId;
+        let currentChatId;
 
         // Função para carregar lista de chats
         function loadChatList() {
@@ -221,44 +200,26 @@
                 chatList.innerHTML = '';
                 snapshot.forEach((doc) => {
                     const chatData = doc.data();
-                    const li = document.createElement('li');
-                    li.className = 'chat-item';
-                    li.innerHTML = `
-                        <span>${chatData.motoboyEmail}</span>
-                        <button class="remove-chat" onclick="removeChat('${doc.id}')">Remover</button>
-                    `;
-                    li.onclick = (e) => {
-                        if (e.target.className !== 'remove-chat') {
-                            loadMessages(doc.id);
-                        }
-                    };
-                    chatList.appendChild(li);
+                    const chatItem = document.createElement('div');
+                    chatItem.className = 'chat-item';
+                    chatItem.textContent = chatData.motoboyEmail;
+                    chatItem.onclick = () => selectChat(doc.id, chatData.motoboyEmail);
+                    chatList.appendChild(chatItem);
                 });
             });
         }
 
-        // Função para remover chat
-        function removeChat(roomId) {
-            if (confirm('Tem certeza que deseja remover este chat?')) {
-                db.collection('chatRooms').doc(roomId).delete()
-                    .then(() => {
-                        console.log("Chat removido com sucesso");
-                        if (currentRoomId === roomId) {
-                            currentRoomId = null;
-                            messagesDiv.innerHTML = '';
-                        }
-                    })
-                    .catch((error) => {
-                        console.error("Erro ao remover chat: ", error);
-                    });
-            }
+        // Função para selecionar um chat
+        function selectChat(chatId, motoboyEmail) {
+            currentChatId = chatId;
+            chatHeader.textContent = `Chat com ${motoboyEmail}`;
+            loadMessages(chatId);
         }
 
         // Função para carregar mensagens
-        function loadMessages(roomId) {
-            currentRoomId = roomId;
+        function loadMessages(chatId) {
             messagesDiv.innerHTML = '';
-            db.collection('chatRooms').doc(roomId).collection('messages')
+            db.collection('chatRooms').doc(chatId).collection('messages')
                 .orderBy('timestamp')
                 .onSnapshot((snapshot) => {
                     snapshot.docChanges().forEach((change) => {
@@ -269,7 +230,7 @@
                     });
                     messagesDiv.scrollTop = messagesDiv.scrollHeight;
                 });
-            observeTypingIndicator(roomId);
+            observeTypingIndicator(chatId);
         }
 
         // Função para exibir mensagem
@@ -282,7 +243,7 @@
             messageElement.innerHTML = `
                 <div class="sender">${message.sender}</div>
                 <div class="text">${message.text}</div>
-                <div class="timestamp">${new Date(message.timestamp.toDate()).toLocaleString()}</div>
+                <div class="timestamp">${new Date(message.timestamp?.toDate()).toLocaleString()}</div>
             `;
             messagesDiv.appendChild(messageElement);
         }
@@ -291,29 +252,29 @@
         messageForm.addEventListener('submit', (e) => {
             e.preventDefault();
             const text = messageInput.value;
-            if (text.trim() === '') return;
+            if (text.trim() === '' || !currentChatId) return;
 
-            if (currentUser && currentRoomId) {
-                const newMessage = {
-                    text: text,
-                    sender: currentUser.email,
-                    timestamp: firebase.firestore.FieldValue.serverTimestamp()
-                };
-                db.collection('chatRooms').doc(currentRoomId).collection('messages').add(newMessage)
-                    .then(() => {
-                        displayMessage(newMessage);
-                        messageInput.value = '';
-                        updateTypingStatus(false);
-                    });
-            }
+            const newMessage = {
+                text: text,
+                sender: currentUser.email,
+                timestamp: firebase.firestore.FieldValue.serverTimestamp()
+            };
+            db.collection('chatRooms').doc(currentChatId).collection('messages').add(newMessage)
+                .then(() => {
+                    messageInput.value = '';
+                    updateTypingStatus(false);
+                })
+                .catch((error) => {
+                    console.error("Erro ao enviar mensagem: ", error);
+                });
         });
 
         // Atualizar status do usuário
         function updateUserStatus(userId, isOnline) {
-            return db.collection('users').doc(userId).update({
+            return db.collection('users').doc(userId).set({
                 isOnline: isOnline,
                 lastSeen: firebase.firestore.FieldValue.serverTimestamp()
-            });
+            }, { merge: true });
         }
 
         // Enviar notificação
@@ -334,7 +295,7 @@
                         sender: currentUser.email,
                         timestamp: firebase.firestore.FieldValue.serverTimestamp()
                     };
-                    db.collection('chatRooms').doc(currentRoomId).collection('messages').add(newMessage)
+                    db.collection('chatRooms').doc(currentChatId).collection('messages').add(newMessage)
                         .then(() => {
                             displayMessage(newMessage);
                         });
@@ -351,16 +312,16 @@
         });
 
         function updateTypingStatus(isTyping) {
-            if (currentUser && currentRoomId) {
-                db.collection('chatRooms').doc(currentRoomId).update({
+            if (currentUser && currentChatId) {
+                db.collection('chatRooms').doc(currentChatId).update({
                     [`${currentUser.uid}_typing`]: isTyping
                 });
             }
         }
 
         // Observar indicador de digitação
-        function observeTypingIndicator(roomId) {
-            db.collection('chatRooms').doc(roomId)
+        function observeTypingIndicator(chatId) {
+            db.collection('chatRooms').doc(chatId)
                 .onSnapshot((doc) => {
                     const data = doc.data();
                     for (let key in data) {
@@ -378,7 +339,7 @@
             messageInput.value += emoji;
         }
 
-        // Verificar autenticação e carregar chats
+        // Verificar autenticação e carregar chat
         auth.onAuthStateChanged((user) => {
             if (user) {
                 currentUser = user;
