--- a/public/menu.html
+++ b/public/menu.html
@@ -90,6 +90,9 @@
             <a href="portalmotoboy.html" class="menu-option">
                 <i class="fas fa-diamond"></i>
                 Desafios
+            <a href="chat.html" class="menu-option">
+                <i class="fas fa-comment-dots"></i>
+                Chat Online
             </a>
             <a href="#" class="menu-option" id="btnLogout">
                 <i class="fas fa-sign-out-alt"></i>
